add_library(fawkes_protobuf_clips SHARED communicator.cpp)

target_link_libraries(fawkes_protobuf_clips stdc++ m fawkescore fawkeslogging)

depend_on_boost_libs(fawkes_protobuf_clips system)

target_compile_options(fawkesbaseapp PUBLIC)
depend_on_protobuf(fawkes_protobuf_clips)
depend_on_protobuf_comm(fawkes_protobuf_clips)
depend_on_clipsmm(fawkes_protobuf_clips)
